--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
     =========================== -->
     <div class="navbar navbar-fixed-top jshead">
         <div class="academic-logo">
-            <img  src="/img/kia.png" />
+            <img  src="/img/logo_sanchaya.png" />
         </div>
         <div class="sanchaya-logo">
-            <img src="./img/logo_sanchaya.png" alt="javascript tutorials" width="200" height="54">
+            <img src="./img/kia.png" alt="javascript tutorials" width="200" height="54">
             <h1>ಕರ್ನಾಟಕ ಇತಿಹಾಸ ಅಕಾದೆಮಿ</h1>
             <h2>ಕರ್ನಾಟಕ ಇತಿಹಾಸ ಅಕಾದೆಮಿ ಪ್ರಕಟಣೆಸಿರುವ ಇತಿಹಾಸ ದರ್ಶನ ಸಂಚಿಕೆಗಳ ಡಿಜಿಟಲ್ ಕನ್ನಡ ಪುಸ್ತಕಗಳು</h2>
             <div class="">
