filter update commit

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <img  src="/img/logo_sanchaya.png" />
         </div>
         <div class="sanchaya-logo">
-            <img src="./img/kia.png" alt="javascript tutorials" width="200" height="54">
+            <img src="./img/kia.png" alt="Karnataka Ithihasa Academy" width="250" height="75">
             <h1>ಕರ್ನಾಟಕ ಇತಿಹಾಸ ಅಕಾದೆಮಿ</h1>
             <h2>ಕರ್ನಾಟಕ ಇತಿಹಾಸ ಅಕಾದೆಮಿ ಪ್ರಕಟಣೆಸಿರುವ ಇತಿಹಾಸ ದರ್ಶನ ಸಂಚಿಕೆಗಳ ಡಿಜಿಟಲ್ ಕನ್ನಡ ಪುಸ್ತಕಗಳು</h2>
             <div class="">
@@ -113,13 +113,13 @@
                 <p class="span1">Filter by :</p>
                 <ul id="filterBy">
                     <li><a href="#" data-level="any"  title="filter books by All">All</a></li>
-                    <li><a href="#" data-level="1910" title="filter books by year">1910</a></li>
-                    <li><a href="#" data-level="1973" title="filter books by year">1973</a></li>
-                    <li><a href="#" data-level="1983" title="filter books by year">1983</a></li>
+                    <li><a href="#" data-level="1986" title="filter books by year">1986</a></li>
                     <li><a href="#" data-level="1987" title="filter books by year">1987</a></li>
+                    <li><a href="#" data-level="1988" title="filter books by year">1988</a></li>
                     <li><a href="#" data-level="1989" title="filter books by year">1989</a></li>
                     <li><a href="#" data-level="1990" title="filter books by year">1990</a></li>
                     <li><a href="#" data-level="1991" title="filter books by year">1991</a></li>
+                    <li><a href="#" data-level="1992" title="filter books by year">1992</a></li>
                     <li><a href="#" data-level="1993" title="filter books by year">1993</a></li>
                     <li><a href="#" data-level="1994" title="filter books by year">1994</a></li>
                     <li><a href="#" data-level="1995" title="filter books by year">1995</a></li>
@@ -129,16 +129,27 @@
                     <li><a href="#" data-level="1999" title="filter books by year">1999</a></li>
                     <li><a href="#" data-level="2000" title="filter books by year">2000</a></li>
                     <li><a href="#" data-level="2001" title="filter books by year">2001</a></li>
+                    <li><a href="#" data-level="2002" title="filter books by year">2002</a></li>
+                    <li><a href="#" data-level="2003" title="filter books by year">2003</a></li>
                     <li><a href="#" data-level="2004" title="filter books by year">2004</a></li>
-                    <li><a href="#" data-level="2007" title="filter books by year">2007</a></li>
+                    <li><a href="#" data-level="2005" title="filter books by year">2005</a></li>
+                    <li><a href="#" data-level="2006" title="filter books by year">2006</a></li>
                     <li><a href="#" data-level="2008" title="filter books by year">2008</a></li>
                     <li><a href="#" data-level="2009" title="filter books by year">2009</a></li>
                     <li><a href="#" data-level="2010" title="filter books by year">2010</a></li>
                     <li><a href="#" data-level="2011" title="filter books by year">2011</a></li>
                     <li><a href="#" data-level="2012" title="filter books by year">2012</a></li>
+                    <li><a href="#" data-level="2013" title="filter books by year">2013</a></li>
+                    <li><a href="#" data-level="2014" title="filter books by year">2014</a></li>
+                    <li><a href="#" data-level="2015" title="filter books by year">2015</a></li>
                     <li><a href="#" data-level="2016" title="filter books by year">2016</a></li>
                     <li><a href="#" data-level="2017" title="filter books by year">2017</a></li>
                     <li><a href="#" data-level="2018" title="filter books by year">2018</a></li>
+                    <li><a href="#" data-level="2019" title="filter books by year">2019</a></li>
+                    <li><a href="#" data-level="2020" title="filter books by year">2020</a></li>
+                    <li><a href="#" data-level="2021" title="filter books by year">2021</a></li>
+                    <li><a href="#" data-level="2022" title="filter books by year">2022</a></li>
+
 
                 </ul>
             </div>
