logo fix commit

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <img  src="/img/logo_sanchaya.png" />
         </div>
         <div class="sanchaya-logo">
-            <img src="./img/kia.png" alt="Karnataka Ithihasa Academy" width="250" height="75">
+            <img src="./img/kia.png" alt="Karnataka Ithihasa Academy" width="100%" height="75">
             <h1>ಕರ್ನಾಟಕ ಇತಿಹಾಸ ಅಕಾದೆಮಿ</h1>
             <h2>ಕರ್ನಾಟಕ ಇತಿಹಾಸ ಅಕಾದೆಮಿ ಪ್ರಕಟಣೆಸಿರುವ ಇತಿಹಾಸ ದರ್ಶನ ಸಂಚಿಕೆಗಳ ಡಿಜಿಟಲ್ ಕನ್ನಡ ಪುಸ್ತಕಗಳು</h2>
             <div class="">
