--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>ಕರ್ನಾಟಕ ಇತಿಹಾಸ ಅಕಾದೆಮಿ ಪ್ರಕಟಣೆಸಿರುವ ಇತಿಹಾಸ ದರ್ಶನ ಸಂಚಿಕೆಗಳ ಡಿಜಿಟಲ್ ಕನ್ನಡ ಪುಸ್ತಕಗಳು</title>
+    <title>ಕರ್ನಾಟಕ ಇತಿಹಾಸ ಅಕಾದೆಮಿ ಪ್ರಕಟಣೆಸಿರುವ ಇತಿಹಾಸ ದರ್ಶನ ಸರಣಿಯ ಡಿಜಿಟಲ್ ಸಂಚಿಕೆಗಳು/title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <meta name="description" content="ಕಕರ್ನಾಟಕ ಇತಿಹಾಸ ಅಕಾದೆಮಿ ಪ್ರಕಟಣೆಸಿರುವ ಇತಿಹಾಸ ದರ್ಶನ ಸಂಚಿಕೆಗಳ ಸುಲಭ ಲಭ್ಯತೆಗೆ ಡಿಜಿಟಲ್ ಸಂಚಯವನ್ನು ಸೃಷ್ಟಿಸಲಾಗಿದೆ‍!">
     <meta name="author" content="Sanchaya">
@@ -43,9 +43,9 @@
             <img  src="/img/logo_sanchaya.png" />
         </div>
         <div class="sanchaya-logo">
-            <img src="./img/kia.png" alt="Karnataka Ithihasa Academy" width="100%" height="75">
+            <img src="./img/kia.png" alt="Karnataka Ithihasa Academy" width="300" height="36">
             <h1>ಕರ್ನಾಟಕ ಇತಿಹಾಸ ಅಕಾದೆಮಿ</h1>
-            <h2>ಕರ್ನಾಟಕ ಇತಿಹಾಸ ಅಕಾದೆಮಿ ಪ್ರಕಟಣೆಸಿರುವ ಇತಿಹಾಸ ದರ್ಶನ ಸಂಚಿಕೆಗಳ ಡಿಜಿಟಲ್ ಕನ್ನಡ ಪುಸ್ತಕಗಳು</h2>
+            <h2>ಕರ್ನಾಟಕ ಇತಿಹಾಸ ಅಕಾದೆಮಿ ಪ್ರಕಟಣೆಸಿರುವ ಇತಿಹಾಸ ದರ್ಶನ ಸರಣಿಯ ಡಿಜಿಟಲ್ ಸಂಚಿಕೆಗಳು</h2>
             <div class="">
                 <a href="https://archive.org/details/ServantsOfKnowledge?tab=collection&query=subject%3A%22%E0%B2%B2%E0%B2%B2%E0%B2%BF%E0%B2%A4%E0%B2%95%E0%B2%B2%E0%B2%BE+%E0%B2%85%E0%B2%95%E0%B2%BE%E0%B2%A1%E0%B3%86%E0%B2%AE%E0%B2%BF+%E0%B2%B8%E0%B2%82%E0%B2%9A%E0%B2%AF%22" id="sanchi">#SeravntsOfKnowledge</a>
                 |
@@ -73,9 +73,9 @@
     <div class="container" id="jsinfos">
         <div class="row">
             <div class="span6">
-                <h4>ಕರ್ನಾಟಕ ಇತಿಹಾಸ ಅಕಾದೆಮಿ ಪ್ರಕಟಣೆಸಿರುವ ಇತಿಹಾಸ ದರ್ಶನ ಸಂಚಿಕೆಗಳ ಡಿಜಿಟಲ್ ಕನ್ನಡ ಪುಸ್ತಕಗಳು</h4>
+                <h4>ಕರ್ನಾಟಕ ಇತಿಹಾಸ ಅಕಾದೆಮಿ ಪ್ರಕಟಣೆಸಿರುವ ಇತಿಹಾಸ ದರ್ಶನ ಸರಣಿಯ ಡಿಜಿಟಲ್ ಸಂಚಿಕೆಗಳು</h4>
                 <hr>
-                <p> "ಕರ್ನಾಟಕ ಇತಿಹಾಸ ಅಕಾದೆಮಿ ಪ್ರಕಟಣೆಸಿರುವ ಇತಿಹಾಸ ದರ್ಶನ ಸಂಚಿಕೆಗಳ ಡಿಜಿಟಲ್ ಕನ್ನಡ ಪುಸ್ತಕಗಳನ್ನು ಸುಲಭವಾಗಿ ಸಿಗುವಂತೆ ಮಾಡಲು ಈ ಡಿಜಿಟಲ್ ಸಂಚಯವನ್ನು ಸೃಷ್ಟಿಸಲಾಗಿದೆ‍!. ಈ ಕಾರ್ಯಕ್ಕೆ ಆಸಕ್ತರು, ಪುಸ್ತಕಗಳನ್ನು ಹೊಂದಿರುವವರು,
+                <p> "ಕಕರ್ನಾಟಕ ಇತಿಹಾಸ ಅಕಾದೆಮಿ ಪ್ರಕಟಣೆಸಿರುವ ಇತಿಹಾಸ ದರ್ಶನ ಸರಣಿಯ ಡಿಜಿಟಲ್ ಸಂಚಿಕೆಗಳು ಸುಲಭವಾಗಿ ಸಿಗುವಂತೆ ಮಾಡಲು ಈ ಡಿಜಿಟಲ್ ಸಂಚಯವನ್ನು ಸೃಷ್ಟಿಸಲಾಗಿದೆ‍!. ಈ ಕಾರ್ಯಕ್ಕೆ ಆಸಕ್ತರು, ಪುಸ್ತಕಗಳನ್ನು ಹೊಂದಿರುವವರು,
                 ನಮ್ಮ ತಾಂತ್ರಿಕ ಕೆಲಸಗಳಿಗೆ ಸಹಕರಿಸುವವರು, ಯಾರು ಬೇಕಾದರೂ ಕೈ ಜೋಡಿಸಬಹುದು. ಸಂಪರ್ಕಿಸಿ dev@sanchaya.net</p>
             </div>
             <div class="span6">
@@ -102,7 +102,7 @@
         <div class="row">
             <div class="pythonbooks span12">
                 <p>See also :</p>
-                <a href="https://sanchaya.org/" title="ಪುಸ್ತಕ ಡಿಜಿಟಲೀಕರಣ ಯೋಜನೆ"‍ target="_blank">
+                <a href="https://sanchaya.org/" title="ಪುಸ್ತಕ ಡಿಜಿಟಲೀಕರಣ ಯೋಜನೆ" target="_blank">
                     <img src="./img/logo_sanchaya.png" alt="Sanchaya" title="ಕನ್ನಡ ಭಾಷಾ ತಂತ್ರಜ್ಞಾನ ಸಂ‍ಶೋಧನೆ ಹಾಗೂ ಅಧ್ಯಯನ ವೇದಿಕೆ!" width="100" height="16">
                 </a>
                 <a href="https://sanchaya.org/project/kannada-digitization-project/" target="_blank">
@@ -165,7 +165,7 @@
     <div class="footer">
         <hr>
         <p>
-            ಈ ಡಿಜಿಟಲೀಕರಣವನ್ನು ‍ಸಂಚಿ ಫೌಂಡೇಷನ್®, ಬೆಂಗಳೂರು ಇವರ ಸಹಯೋಗದೊಂದಿಗೆ ಸಾಧ್ಯವಾಗಿಸಲಾಗಿದೆ.
+            ಈ ಡಿಜಿಟಲೀಕರಣವನ್ನು ಸಂಚಿ ಫೌಂಡೇಷನ್®, ಬೆಂಗಳೂರು ಇವರ ಸಹಯೋಗದೊಂದಿಗೆ ಸಾಧ್ಯವಾಗಿಸಲಾಗಿದೆ.
         </p>
         <p> <b>Sanchi Foundation</b>® | ಸಂಚಿ ಫೌಂಡೇಷನ್® Except where otherwise noted, content on this site
           is licensed under a Creative Commons Attribution 4.0 International License.
