--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>ಕರ್ನಾಟಕ ಇತಿಹಾಸ ಅಕಾದೆಮಿ ಪ್ರಕಟಣೆಸಿರುವ ಇತಿಹಾಸ ದರ್ಶನ ಸರಣಿಯ ಡಿಜಿಟಲ್ ಸಂಚಿಕೆಗಳು/title>
+    <title>ಕರ್ನಾಟಕ ಇತಿಹಾಸ ಅಕಾದೆಮಿ ಪ್ರಕಟಣೆಸಿರುವ ಇತಿಹಾಸ ದರ್ಶನ ಸರಣಿಯ ಡಿಜಿಟಲ್ ಸಂಚಿಕೆಗಳು</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <meta name="description" content="ಕಕರ್ನಾಟಕ ಇತಿಹಾಸ ಅಕಾದೆಮಿ ಪ್ರಕಟಣೆಸಿರುವ ಇತಿಹಾಸ ದರ್ಶನ ಸಂಚಿಕೆಗಳ ಸುಲಭ ಲಭ್ಯತೆಗೆ ಡಿಜಿಟಲ್ ಸಂಚಯವನ್ನು ಸೃಷ್ಟಿಸಲಾಗಿದೆ‍!">
     <meta name="author" content="Sanchaya">
